<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ghost</string>
    <string name="action_settings">Settings</string>
    <string name="user_hint">Enter your next letter:</string>
    <string name="OK">OK</string>    
    <string name="must_be_letter">User move must be a letter.</string>
    <string name="play_game">Play</string>
    <string name="instructions">Tutorial</string>
    <string name="how_to_play">How to Play:</string>
	<string name="back_button">Back</string>
	<string name="game_over">Game Over</string>
	<string name="play_again">Play Again</string>
	<string name="main_menu">Main Menu</string>
	<string name="definition">Definition</string>
	<string name="win">You Win!</string>
	<string name="lose">Try Again</string>
	<string name="completed_word">%1$s is a word.</string>
	<string name="impossible_word">The letters %1$s cannot form a word. The computer was going for %2$s.</string>
	<string name="sample">Auxiliart cannot form a word. The computer was going for auxiliary.</string>
	<string name="must_be_length_one">User move must be only one letter</string>
	<string name="pause">Paused</string>
	<string name="restart">Restart</string>	
	<string name="tut1">Each player (you vs. your infinitely smarter and more superior cell phone) takes turns giving letters to form a word while avoiding being the last person to complete the word. Say the letter sequence "Ghos" has been made. (Swipe Right)</string>
	<string name="tut2">If it is your turn, playing a T would cause you to lose because that forms the complete word Ghost.</string>
	<string name="tut3">On the other hand, you cannot play letters that make it impossible for the word to continue playing. Playing an X would cause you to lose too.</string>
	<string name="tut4">Force the computer to play a letter that completes a word to win. Remember that words must be three letters or more.</string>
	<string name="ex1">Ghos</string>
	<string name="ex2">Ghost</string>
	<string name="ex3">Ghosx</string>
	<string name="ex4">Have Fun!</string>
	<string name="stats">Statistics</string>
</resources>
