<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:id="@+id/game_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:textSize="30sp" />

    <TextView
        android:id="@+id/game_reason"
        android:layout_width="200dp"
        android:layout_height="wrap_content"        
        android:textSize="15sp"
        android:gravity="center" />

    <Button
        android:id="@+id/play_again_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/play_again" />

    <Button
        android:id="@+id/main_menu_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_menu" />

    <Button
        android:id="@+id/definition"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/definition" />

</LinearLayout>
